--- a/src/main/resources/static/html/manageCourses.html
+++ b/src/main/resources/static/html/manageCourses.html
@@ -18,38 +18,40 @@
 <title>ShowyourSkillz</title>
 <body ng-app="manageApp">
 <div ng-controller="manageCtrl">
-<nav id="header-nav" class="navbar default navbar-light bg-faded">
-    <div class="container-fluid">
-        <div class="navbar-header col-sm-2 col-xs-2 col-md-2">
-            <a class="navbar-brand" href="/html/home.html">ShowYourSkillz</a></li>
-        </div>
-        <div class="nav pull-right col-sm-4 col-xs-5 col-md-3">
-            <ul class="nav navbar-nav pull-right">
-                <li class="btn-group" id="menuLogin">
-                    <button type="text" class="btn btn-primary" style="text-transform: Capitalize;">Welcome, {{user.fname}}</button>
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <span class="caret"></span>
-                        <span class="sr-only">Toggle Dropdown</span>
-                    </button>
-                    <div class="dropdown-menu">
-                        <p>
-                            <a class="btn btn-outline-success" href="profilePage.html">Profile</a>
-                        </p>
-                        <div class="dropdown-divider">
-                            <a href="#" type="submit" ng-click="logout()">Logout</a>
+    <nav id="header-nav" class="navbar default navbar-light bg-faded">
+        <div class="container-fluid">
+            <div class="navbar-header col-sm-2 col-xs-2 col-md-2">
+                <a class="navbar-brand" href="/html/home.html">ShowYourSkillz</a></li>
+            </div>
+            <div class="nav pull-right col-sm-4 col-xs-5 col-md-3">
+                <ul class="nav navbar-nav pull-right">
+                    <li class="btn-group" id="menuLogin">
+                        <button type="text" class="btn btn-primary" style="text-transform: Capitalize;">Welcome, {{user.fname}}</button>
+                        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="caret"></span>
+                            <span class="sr-only">Toggle Dropdown</span>
+                        </button>
+                        <div class="dropdown-menu">
+                            <p>
+                                <a class="btn btn-outline-success" href="profilePage.html">Profile</a>
+                            </p>
+                            <div class="dropdown-divider">
+                                <a href="#" type="submit" ng-click="logout()">Logout</a>
+                            </div>
                         </div>
-                    </div>
-                </li>
-            </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
-    </div>
+    </nav>
+</div>
 
 
 <div class="navbar navbar-default navbar-fixed-left" id="manage">
-    <a class="navbar-brand" href="#">COURSES</a><br>
-    <ul class="nav navbar-nav">
+    <div>
+        <a class="navbar-brand" href="#">COURSES</a>
+    </div>
+    <ul class="nav navbar-nav" style="float: left;">
         <li class="active"><a href="#">Posted Skills</a></li><br>
         <li><a href="#">Enrolled Skills</a></li><br>
         <li><a href="#">Interested Skills</a></li>
@@ -58,17 +60,17 @@
 <div class="container">
     <div class="well well-sm">
        <!-- <strong>Browse Skills</strong>-->
-        <div class="btn-group">
+        <!--<div class="btn-group">
             <a href="#" id="list" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-th-list">
             </span>List</a> <a href="#" id="grid" class="btn btn-default btn-sm"><span
                 class="glyphicon glyphicon-th"></span>Grid</a>
-        </div>
+        </div>-->
 
         <div id="products" class="row list-group" ng-controller="manageSkillsCntrl">
 
-            <div ng-repeat="skill in skills">
+            <div ng-repeat="skill in skills" trackBy $index>
                 <!--<form class="container">-->
-                <div class="item  col-xs-4 col-lg-4">
+                <div class="item col-xs-10 col-sm-10 col-lg-4">
                     <div class="thumbnail">
                         <div class="caption">
                             <h4 class="group inner list-group-item-heading">{{ skill.skillName }}</h4>
@@ -82,8 +84,10 @@
                                 </div>
                             </div>
                             <div class="row">
-                            <a class="btn btn-success col-md-3 btn-primary col-lg-push-2" ng-click="editSkill(skill.skillId)">Edit</a>
-                            <a class="btn btn-success col-md-3 btn-primary col-lg-push-4" ng-click="deleteSkill(skill.skillId)">Delete</a>
+                            <div class="col-xs-10 col-sm-10 col-md-10">
+                                <a class="btn btn-success col-md-push-2 col-sm-push-2 col-sm-push-2 btn-primary col-lg-push-2" ng-click="editSkill(skill.skillId)">Edit</a>
+                                <a class="btn btn-success col-md-push-2 col-sm-push-2 col-sm-push-2 btn-primary col-lg-push-4" ng-click="deleteSkill(skill.skillId,$index)">Delete</a>
+                            </div>
                             </div>
                         </div>
                     </div>
