--- a/src/main/resources/static/html/manageCourses.html
+++ b/src/main/resources/static/html/manageCourses.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/profilestyle.css">
     <link rel="stylesheet" href="../css/manageCourses.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css" media="screen" >
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="../css/color/color-1.css" id="color">
     <link rel="stylesheet" href="../css/sweetalert2.min.css">
@@ -13,10 +14,14 @@
     <script src="../js/jquery-2.1.4.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/angular.min.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-sanitize.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.js"></script>
+    <!--<script src="../js/script.js"></script>-->
 </head>
 <title>ShowyourSkillz</title>
-<body ng-app="manageApp">
+<body ng-app="SkillsApp">
 <div ng-controller="manageCtrl">
     <nav id="header-nav" class="navbar default navbar-light bg-faded">
         <div class="container-fluid">
@@ -100,42 +105,9 @@
 
 </div>
 
-<!--<div class="container">
-    <!--div class="row"
-    <div class="card">
-        <div class="container">
-            <form>
-                <h4><b>Course#1</b></h4><br>
-                <div class="form-group row">
-                    <label class="col-xs-1 col-form-label">Name</label>
-                    <span class="col-xs-2">pooja
-                                    </span>
-
-                    <br>
-                    <!--<label class="col-xs-1 col-form-label">Description</label>
-                    <span class="col-xs-2">description
-                    </span><br>
-                    <div class="dropdown open">
-                        <label class="col-xs-1 col-form-label">Description</label>
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Dropdown button
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </div>
-
-
-                </div>
-
-
-
-            </form>
-        </div>-->
-
-    <!---->
+<script src="../js/app/app.js"></script>
+<script src="../js/directives/directive.js"></script>
+<script src="../js/controllers/controller.js"></script>
 </body>
 </html>
 
