--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -93,7 +93,7 @@
     </style>
     <!--<script src="js/script.js"></script>-->
 </head>
-<body ng-app="MyApp">
+<body ng-app="SkillsApp">
     <nav id="header-nav" class="navbar default navbar-light bg-faded">
         <!--<div class="container">-->
             <div class="navbar-header col-sm-2 col-xs-1 col-md-2">
@@ -127,9 +127,9 @@
     </nav>
     <div ng-include="'html/categorySidebar.html'"></div>
     <div ng-include="'html/skillsHolder.html'"></div>
-    <script src="js/app.js"></script>
-    <script src="js/directive.js"></script>
-    <script src="js/controller.js"></script>
+    <script src="js/app/app.js"></script>
+    <script src="js/directives/directive.js"></script>
+    <script src="js/controllers/controller.js"></script>
 </body>
 </html>
 	
