--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -22,7 +22,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.js"></script>
         <!--<script src="../js/script.js"></script>-->
     </head>
-    <body ng-app="MyApp" ng-controller="homeCntrl" ng-cloak>
+    <body ng-app="SkillsApp" ng-controller="homeCntrl" ng-cloak>
         <nav id="header-nav" class="navbar default navbar-light bg-faded">
             <div class="container-fluid">
                 <div class="navbar-header col-sm-2 col-xs-2 col-md-2">
@@ -128,8 +128,8 @@
                 </div>  
             </md-dialog>
         </script>
-        <script src="../js/app.js"></script>
-        <script src="../js/directive.js"></script>
-        <script src="../js/controller.js"></script>
+        <script src="../js/app/app.js"></script>
+        <script src="../js/directives/directive.js"></script>
+        <script src="../js/controllers/controller.js"></script>
     </body>
 </html>
