--- a/src/main/resources/static/html/signup_page.html
+++ b/src/main/resources/static/html/signup_page.html
@@ -4,12 +4,17 @@
     <link href='../css/bootstrap.min.css' rel='stylesheet' type='text/css'>
     <link href='../css/SignUpStyle.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../css/sweetalert2.min.css">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.css">
     <script src="../js/sweetalert2.min.js"></script>
     <script src="../js/jquery-2.1.4.min.js"></script>
     <script src="../js/bootstrap.js"></script>
     <script src="../js/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-sanitize.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.js"></script>
   </head>
-  <body ng-app="signUpApp">
+  <body ng-app="SkillsApp">
     <div class='container'>
       <div class='panel panel-primary dialog-panel'>
         <div class='panel-heading'>
@@ -134,6 +139,8 @@
         </div>
       </div>
     </div>
-    <script src="../js/script.js"></script>
+    <script src="../js/app/app.js"></script>
+    <script src="../js/directives/directive.js"></script>
+    <script src="../js/controllers/controller.js"></script>
   </body>
 </html>
