connecting to test database

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -125,7 +125,7 @@
             </div>
         <!--</div>-->
     </nav>
-    <div ng-include="'html/categorySidebar.html'"></div>
+    <div class="image-holder"></div>
     <div ng-include="'html/skillsHolder.html'"></div>
     <script src="js/app/app.js"></script>
     <script src="js/directives/directive.js"></script>
