--- a/src/main/resources/static/html/categorySidebar.html
+++ b/src/main/resources/static/html/categorySidebar.html
@@ -7,7 +7,7 @@
 
         <div ng-controller='MainController' style="font-size:12px; letter-spacing: 0.08em; color:white">
   <span ng-repeat="category in categories">
-    <input type='checkbox' value="{{category}}" check-list='checked_category'> {{category}}<br/>
+    <input type='checkbox' value="{{category}}" check-list='checked_category'> {{category}}<br><br>
   </span>
         </div>
 
